Image alignment fixed

--- a/src/assets/styles/question.css
+++ b/src/assets/styles/question.css
@@ -2,6 +2,7 @@
     /* border: solid #a0a0a0; */
     /* border-width: 1px 1px; */
     display: inline-block;
+    vertical-align: bottom;
     margin: 10px;
     padding: 10px;
     cursor: pointer;
